testdata/s-config_dump.json
{
 "configs": [
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.BootstrapConfigDump",
   "bootstrap": {
    "node": {
     "id": "sidecar~172.30.172.171~myserver-v1-67c5c9d544-vl9b7.default~default.svc.cluster.local",
     "cluster": "myserver.default",
     "metadata": {
      "INTERCEPTION_MODE": "REDIRECT",
      "istio": "sidecar",
      "version": "v1",
      "ISTIO_PROXY_VERSION": "1.1.0",
      "ISTIO_PROXY_SHA": "istio-proxy:ea9e05a766e5ecf301c44b5f779cbccd675b644d",
      "ISTIO_VERSION": "master-20181108-09-15",
      "kubernetes.io/psp": "ibm-privileged-psp",
      "app": "myserver",
      "pod-template-hash": "2371758100",
      "POD_NAME": "myserver-v1-67c5c9d544-vl9b7"
     },
     "build_version": "ea9e05a766e5ecf301c44b5f779cbccd675b644d/1.9.0-dev/Clean/RELEASE"
    },
    "static_resources": {
     "listeners": [
      {
       "address": {
        "socket_address": {
         "address": "0.0.0.0",
         "port_value": 15090
        }
       },
       "filter_chains": [
        {
         "filters": [
          {
           "name": "envoy.http_connection_manager",
           "config": {
            "codec_type": "AUTO",
            "http_filters": {
             "name": "envoy.router"
            },
            "stat_prefix": "stats",
            "route_config": {
             "virtual_hosts": [
              {
               "routes": [
                {
                 "route": {
                  "cluster": "prometheus_stats"
                 },
                 "match": {
                  "prefix": "/stats/prometheus"
                 }
                }
               ],
               "domains": [
                "*"
               ],
               "name": "backend"
              }
             ]
            }
           }
          }
         ]
        }
       ]
      }
     ],
     "clusters": [
      {
       "name": "prometheus_stats",
       "connect_timeout": "0.250s",
       "hosts": [
        {
         "socket_address": {
          "address": "127.0.0.1",
          "port_value": 15000
         }
        }
       ]
      },
      {
       "name": "xds-grpc",
       "type": "STRICT_DNS",
       "connect_timeout": "10s",
       "hosts": [
        {
         "socket_address": {
          "address": "istio-pilot.istio-system",
          "port_value": 15011
         }
        }
       ],
       "circuit_breakers": {
        "thresholds": [
         {
          "max_connections": 100000,
          "max_pending_requests": 100000,
          "max_requests": 100000
         },
         {
          "priority": "HIGH",
          "max_connections": 100000,
          "max_pending_requests": 100000,
          "max_requests": 100000
         }
        ]
       },
       "tls_context": {
        "common_tls_context": {
         "tls_certificates": [
          {
           "certificate_chain": {
            "filename": "/etc/certs/cert-chain.pem"
           },
           "private_key": {
            "filename": "/etc/certs/key.pem"
           }
          }
         ],
         "validation_context": {
          "trusted_ca": {
           "filename": "/etc/certs/root-cert.pem"
          },
          "verify_subject_alt_name": [
           "spiffe://cluster.local/ns/istio-system/sa/istio-pilot-service-account"
          ]
         },
         "alpn_protocols": [
          "h2"
         ]
        }
       },
       "http2_protocol_options": {},
       "upstream_connection_options": {
        "tcp_keepalive": {
         "keepalive_time": 300
        }
       }
      },
      {
       "name": "zipkin",
       "type": "STRICT_DNS",
       "connect_timeout": "1s",
       "hosts": [
        {
         "socket_address": {
          "address": "zipkin.istio-system",
          "port_value": 9411
         }
        }
       ]
      }
     ]
    },
    "dynamic_resources": {
     "lds_config": {
      "ads": {}
     },
     "cds_config": {
      "ads": {}
     },
     "ads_config": {
      "api_type": "GRPC",
      "grpc_services": [
       {
        "envoy_grpc": {
         "cluster_name": "xds-grpc"
        }
       }
      ]
     }
    },
    "tracing": {
     "http": {
      "name": "envoy.zipkin",
      "config": {
       "collector_cluster": "zipkin"
      }
     }
    },
    "admin": {
     "access_log_path": "/dev/null",
     "address": {
      "socket_address": {
       "address": "127.0.0.1",
       "port_value": 15000
      }
     }
    },
    "stats_config": {
     "stats_tags": [
      {
       "tag_name": "cluster_name",
       "regex": "^cluster\\.((.+?(\\..+?\\.svc\\.cluster\\.local)?)\\.)"
      },
      {
       "tag_name": "tcp_prefix",
       "regex": "^tcp\\.((.*?)\\.)\\w+?$"
      },
      {
       "tag_name": "response_code",
       "regex": "_rq(_(\\d{3}))$"
      },
      {
       "tag_name": "response_code_class",
       "regex": "_rq(_(\\dxx))$"
      },
      {
       "tag_name": "http_conn_manager_listener_prefix",
       "regex": "^listener(?=\\.).*?\\.http\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      },
      {
       "tag_name": "http_conn_manager_prefix",
       "regex": "^http\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      },
      {
       "tag_name": "listener_address",
       "regex": "^listener\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      }
     ],
     "use_all_default_tags": false
    }
   },
   "last_updated": "2018-11-11T23:22:33.264Z"
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.ClustersConfigDump",
   "version_info": "2018-11-12T16:02:07Z/42",
   "static_clusters": [
    {
     "cluster": {
      "name": "prometheus_stats",
      "connect_timeout": "0.250s",
      "hosts": [
       {
        "socket_address": {
         "address": "127.0.0.1",
         "port_value": 15000
        }
       }
      ]
     },
     "last_updated": "2018-11-11T23:22:33.268Z"
    },
    {
     "cluster": {
      "name": "xds-grpc",
      "type": "STRICT_DNS",
      "connect_timeout": "10s",
      "hosts": [
       {
        "socket_address": {
         "address": "istio-pilot.istio-system",
         "port_value": 15011
        }
       }
      ],
      "circuit_breakers": {
       "thresholds": [
        {
         "max_connections": 100000,
         "max_pending_requests": 100000,
         "max_requests": 100000
        },
        {
         "priority": "HIGH",
         "max_connections": 100000,
         "max_pending_requests": 100000,
         "max_requests": 100000
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-pilot-service-account"
         ]
        },
        "alpn_protocols": [
         "h2"
        ]
       }
      },
      "http2_protocol_options": {},
      "upstream_connection_options": {
       "tcp_keepalive": {
        "keepalive_time": 300
       }
      }
     },
     "last_updated": "2018-11-11T23:22:33.271Z"
    },
    {
     "cluster": {
      "name": "zipkin",
      "type": "STRICT_DNS",
      "connect_timeout": "1s",
      "hosts": [
       {
        "socket_address": {
         "address": "zipkin.istio-system",
         "port_value": 9411
        }
       }
      ]
     },
     "last_updated": "2018-11-11T23:22:33.271Z"
    }
   ],
   "dynamic_active_clusters": [
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "BlackHoleCluster",
      "connect_timeout": "1s"
     },
     "last_updated": "2018-11-11T23:23:33.304Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "PassthroughCluster",
      "type": "ORIGINAL_DST",
      "connect_timeout": "1s",
      "lb_policy": "ORIGINAL_DST_LB"
     },
     "last_updated": "2018-11-11T23:23:33.305Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "inbound|15020||mgmtCluster",
      "connect_timeout": "1s",
      "hosts": [
       {
        "socket_address": {
         "address": "127.0.0.1",
         "port_value": 15020
        }
       }
      ],
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-11T23:23:33.304Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "inbound|80||myserver.default.svc.cluster.local",
      "connect_timeout": "1s",
      "hosts": [
       {
        "socket_address": {
         "address": "127.0.0.1",
         "port_value": 80
        }
       }
      ],
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-11T23:23:33.303Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-mixer-service-account"
         ]
        },
        "alpn_protocols": [
         "istio",
         "h2"
        ]
       },
       "sni": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-11T23:23:33.297Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-mixer-service-account"
         ]
        },
        "alpn_protocols": [
         "istio",
         "h2"
        ]
       },
       "sni": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-11T23:23:33.300Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|15010||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15010||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-11T23:23:33.291Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|15011||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15011||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-11T23:23:33.292Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|15029||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15029||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-11T23:23:33.282Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|15030||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15030||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-11T23:23:33.283Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|15031||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15031||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-11T23:23:33.284Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|15032||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15032||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-11T23:23:33.285Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|15443||istio-egressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15443||istio-egressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-11T23:23:33.276Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|15443||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15443||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-11T23:23:33.287Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|31400||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|31400||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-11T23:23:33.280Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|42422||istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|42422||istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000
        }
       ]
      }
     },
     "last_updated": "2018-11-11T23:23:33.301Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|443||istio-egressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||istio-egressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-11T23:23:33.275Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|443||istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-11T23:23:33.270Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|443||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-11T23:23:33.279Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|443||istio-sidecar-injector.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||istio-sidecar-injector.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-11T23:23:33.303Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|443||kubernetes.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||kubernetes.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-11T23:23:33.265Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|53||istiocoredns.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|53||istiocoredns.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-11T23:23:33.288Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|8060||istio-citadel.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|8060||istio-citadel.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-11T23:23:33.289Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|8080||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|8080||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-11T23:23:33.293Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|80||istio-egressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|80||istio-egressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-11T23:23:33.274Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|80||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|80||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-11T23:23:33.278Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|80||myserver.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|80||myserver.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-11T23:23:33.268Z"
    },
    {
     "version_info": "2018-11-11T23:44:44Z/30",
     "cluster": {
      "name": "outbound|80||myserver2.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|80||myserver2.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-11T23:44:44.618Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|9080||details.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080||details.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-11T23:23:33.266Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|9080||productpage.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080||productpage.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-11T23:23:33.267Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|9080||reviews.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080||reviews.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-11T23:23:33.269Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|9090||prometheus.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9090||prometheus.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-11T23:23:33.302Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|9091||istio-policy.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9091||istio-policy.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000
        }
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-11T23:23:33.294Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|9091||istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9091||istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000
        }
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-11T23:23:33.298Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|9093||istio-citadel.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9093||istio-citadel.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-11T23:23:33.290Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|9093||istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9093||istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-11T23:23:33.271Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|9093||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9093||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-11T23:23:33.294Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|9093||istio-policy.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9093||istio-policy.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000
        }
       ]
      }
     },
     "last_updated": "2018-11-11T23:23:33.297Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|9093||istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9093||istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000
        }
       ]
      }
     },
     "last_updated": "2018-11-11T23:23:33.301Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "cluster": {
      "name": "outbound|9901||istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9901||istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-11T23:23:33.273Z"
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.ListenersConfigDump",
   "version_info": "2018-11-12T16:02:07Z/42",
   "static_listeners": [
    {
     "listener": {
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15090
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "http_filters": {
            "name": "envoy.router"
           },
           "stat_prefix": "stats",
           "route_config": {
            "virtual_hosts": [
             {
              "routes": [
               {
                "match": {
                 "prefix": "/stats/prometheus"
                },
                "route": {
                 "cluster": "prometheus_stats"
                }
               }
              ],
              "domains": [
               "*"
              ],
              "name": "backend"
             }
            ]
           },
           "codec_type": "AUTO"
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2018-11-11T23:22:33.276Z"
    }
   ],
   "dynamic_active_listeners": [
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "172.30.172.171_80",
      "address": {
       "socket_address": {
        "address": "172.30.172.171",
        "port_value": 80
       }
      },
      "filter_chains": [
       {
        "filter_chain_match": {
         "application_protocols": [
          "istio"
         ]
        },
        "tls_context": {
         "common_tls_context": {
          "tls_certificates": [
           {
            "certificate_chain": {
             "filename": "/etc/certs/cert-chain.pem"
            },
            "private_key": {
             "filename": "/etc/certs/key.pem"
            }
           }
          ],
          "validation_context": {
           "trusted_ca": {
            "filename": "/etc/certs/root-cert.pem"
           }
          },
          "alpn_protocols": [
           "h2",
           "http/1.1"
          ]
         },
         "require_client_certificate": true
        },
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "stream_idle_timeout": "0s",
           "generate_request_id": true,
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "forward_client_cert_details": "APPEND_FORWARD",
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "name": "istio_authn",
             "config": {
              "policy": {
               "peers": [
                {
                 "mtls": {
                  "mode": "PERMISSIVE"
                 }
                }
               ]
              }
             }
            },
            {
             "name": "mixer",
             "config": {
              "service_configs": {
               "default": {}
              },
              "transport": {
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                 }
                }
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.reporter.kind": {
                 "string_value": "inbound"
                },
                "destination.port": {
                 "int64_value": "80"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                },
                "destination.namespace": {
                 "string_value": "default"
                },
                "destination.ip": {
                 "bytes_value": "AAAAAAAAAAAAAP//rB6sqw=="
                },
                "destination.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            }
           },
           "route_config": {
            "name": "inbound|80||myserver.default.svc.cluster.local",
            "validate_clusters": false,
            "virtual_hosts": [
             {
              "name": "inbound|http|80",
              "routes": [
               {
                "decorator": {
                 "operation": "myserver.default.svc.cluster.local:80/*"
                },
                "route": {
                 "cluster": "inbound|80||myserver.default.svc.cluster.local",
                 "timeout": "0s",
                 "max_grpc_timeout": "0s"
                },
                "per_filter_config": {
                 "mixer": {
                  "mixer_attributes": {
                   "attributes": {
                    "destination.service.uid": {
                     "string_value": "istio://default/services/myserver"
                    },
                    "destination.service.host": {
                     "string_value": "myserver.default.svc.cluster.local"
                    },
                    "destination.service.namespace": {
                     "string_value": "default"
                    },
                    "destination.service.name": {
                     "string_value": "myserver"
                    }
                   }
                  }
                 }
                },
                "match": {
                 "prefix": "/"
                }
               }
              ],
              "domains": [
               "*"
              ]
             }
            ]
           },
           "stat_prefix": "172.30.172.171_80",
           "use_remote_address": false
          }
         }
        ]
       },
       {
        "filter_chain_match": {},
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "stat_prefix": "172.30.172.171_80",
           "use_remote_address": false,
           "stream_idle_timeout": "0s",
           "generate_request_id": true,
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "forward_client_cert_details": "APPEND_FORWARD",
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n",
              "path": "/dev/stdout"
             }
            }
           ],
           "http_filters": [
            {
             "name": "istio_authn",
             "config": {
              "policy": {
               "peers": [
                {
                 "mtls": {
                  "mode": "PERMISSIVE"
                 }
                }
               ]
              }
             }
            },
            {
             "config": {
              "transport": {
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                 }
                }
               },
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
              },
              "service_configs": {
               "default": {}
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "destination.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                },
                "context.reporter.kind": {
                 "string_value": "inbound"
                },
                "destination.port": {
                 "int64_value": "80"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                },
                "destination.namespace": {
                 "string_value": "default"
                },
                "destination.ip": {
                 "bytes_value": "AAAAAAAAAAAAAP//rB6sqw=="
                }
               }
              }
             },
             "name": "mixer"
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            }
           },
           "route_config": {
            "name": "inbound|80||myserver.default.svc.cluster.local",
            "validate_clusters": false,
            "virtual_hosts": [
             {
              "routes": [
               {
                "decorator": {
                 "operation": "myserver.default.svc.cluster.local:80/*"
                },
                "route": {
                 "max_grpc_timeout": "0s",
                 "cluster": "inbound|80||myserver.default.svc.cluster.local",
                 "timeout": "0s"
                },
                "per_filter_config": {
                 "mixer": {
                  "mixer_attributes": {
                   "attributes": {
                    "destination.service.host": {
                     "string_value": "myserver.default.svc.cluster.local"
                    },
                    "destination.service.uid": {
                     "string_value": "istio://default/services/myserver"
                    },
                    "destination.service.namespace": {
                     "string_value": "default"
                    },
                    "destination.service.name": {
                     "string_value": "myserver"
                    }
                   }
                  }
                 }
                },
                "match": {
                 "prefix": "/"
                }
               }
              ],
              "domains": [
               "*"
              ],
              "name": "inbound|http|80"
             }
            ]
           }
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      },
      "listener_filters": [
       {
        "name": "envoy.listener.tls_inspector"
       }
      ]
     },
     "last_updated": "2018-11-11T23:23:33.338Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "172.21.191.164_15443",
      "address": {
       "socket_address": {
        "address": "172.21.191.164",
        "port_value": 15443
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "transport": {
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
              }
             }
            },
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
           },
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.host": {
              "string_value": "istio-egressgateway.istio-system.svc.cluster.local"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istio-egressgateway"
             },
             "destination.service.name": {
              "string_value": "istio-egressgateway"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             },
             "context.reporter.uid": {
              "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
             },
             "source.uid": {
              "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "stat_prefix": "outbound|15443||istio-egressgateway.istio-system.svc.cluster.local",
           "cluster": "outbound|15443||istio-egressgateway.istio-system.svc.cluster.local",
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-11T23:23:33.339Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "172.21.157.224_15443",
      "address": {
       "socket_address": {
        "address": "172.21.157.224",
        "port_value": 15443
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "transport": {
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
              }
             }
            }
           },
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.host": {
              "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istio-ingressgateway"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             },
             "destination.service.name": {
              "string_value": "istio-ingressgateway"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             },
             "context.reporter.uid": {
              "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
             },
             "source.uid": {
              "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "cluster": "outbound|15443||istio-ingressgateway.istio-system.svc.cluster.local",
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "stat_prefix": "outbound|15443||istio-ingressgateway.istio-system.svc.cluster.local"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-11T23:23:33.339Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "172.21.242.11_443",
      "address": {
       "socket_address": {
        "address": "172.21.242.11",
        "port_value": 443
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "transport": {
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
              }
             }
            }
           },
           "mixer_attributes": {
            "attributes": {
             "context.reporter.kind": {
              "string_value": "outbound"
             },
             "context.reporter.uid": {
              "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
             },
             "source.uid": {
              "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
             },
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istio-sidecar-injector"
             },
             "destination.service.host": {
              "string_value": "istio-sidecar-injector.istio-system.svc.cluster.local"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             },
             "destination.service.name": {
              "string_value": "istio-sidecar-injector"
             }
            }
           },
           "disable_check_calls": true
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "stat_prefix": "outbound|443||istio-sidecar-injector.istio-system.svc.cluster.local",
           "cluster": "outbound|443||istio-sidecar-injector.istio-system.svc.cluster.local",
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n",
              "path": "/dev/stdout"
             }
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-11T23:23:33.340Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "172.21.191.164_443",
      "address": {
       "socket_address": {
        "address": "172.21.191.164",
        "port_value": 443
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "transport": {
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
              }
             }
            }
           },
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "source.uid": {
              "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
             },
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istio-egressgateway"
             },
             "destination.service.host": {
              "string_value": "istio-egressgateway.istio-system.svc.cluster.local"
             },
             "destination.service.name": {
              "string_value": "istio-egressgateway"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             },
             "context.reporter.uid": {
              "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "stat_prefix": "outbound|443||istio-egressgateway.istio-system.svc.cluster.local",
           "cluster": "outbound|443||istio-egressgateway.istio-system.svc.cluster.local"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-11T23:23:33.340Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "172.21.13.248_443",
      "address": {
       "socket_address": {
        "address": "172.21.13.248",
        "port_value": 443
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "transport": {
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
              }
             }
            }
           },
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.host": {
              "string_value": "istio-galley.istio-system.svc.cluster.local"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istio-galley"
             },
             "destination.service.name": {
              "string_value": "istio-galley"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             },
             "context.reporter.uid": {
              "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
             },
             "source.uid": {
              "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "stat_prefix": "outbound|443||istio-galley.istio-system.svc.cluster.local",
           "cluster": "outbound|443||istio-galley.istio-system.svc.cluster.local",
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n",
              "path": "/dev/stdout"
             }
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-11T23:23:33.341Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "172.21.97.51_53",
      "address": {
       "socket_address": {
        "address": "172.21.97.51",
        "port_value": 53
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "transport": {
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
              }
             }
            },
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
           },
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "context.reporter.uid": {
              "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
             },
             "source.uid": {
              "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
             },
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istiocoredns"
             },
             "destination.service.host": {
              "string_value": "istiocoredns.istio-system.svc.cluster.local"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             },
             "destination.service.name": {
              "string_value": "istiocoredns"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "cluster": "outbound|53||istiocoredns.istio-system.svc.cluster.local",
           "access_log": [
            {
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             },
             "name": "envoy.file_access_log"
            }
           ],
           "stat_prefix": "outbound|53||istiocoredns.istio-system.svc.cluster.local"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-11T23:23:33.341Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "172.21.180.133_15011",
      "address": {
       "socket_address": {
        "address": "172.21.180.133",
        "port_value": 15011
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "transport": {
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
              }
             }
            },
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
           },
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "context.reporter.uid": {
              "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
             },
             "source.uid": {
              "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
             },
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.host": {
              "string_value": "istio-pilot.istio-system.svc.cluster.local"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istio-pilot"
             },
             "destination.service.name": {
              "string_value": "istio-pilot"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "stat_prefix": "outbound|15011||istio-pilot.istio-system.svc.cluster.local",
           "cluster": "outbound|15011||istio-pilot.istio-system.svc.cluster.local"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-11T23:23:33.342Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "172.21.28.71_42422",
      "address": {
       "socket_address": {
        "address": "172.21.28.71",
        "port_value": 42422
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "transport": {
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
              }
             }
            }
           },
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "context.reporter.uid": {
              "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
             },
             "source.uid": {
              "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
             },
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istio-telemetry"
             },
             "destination.service.host": {
              "string_value": "istio-telemetry.istio-system.svc.cluster.local"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             },
             "destination.service.name": {
              "string_value": "istio-telemetry"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "access_log": [
            {
             "config": {
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n",
              "path": "/dev/stdout"
             },
             "name": "envoy.file_access_log"
            }
           ],
           "stat_prefix": "outbound|42422||istio-telemetry.istio-system.svc.cluster.local",
           "cluster": "outbound|42422||istio-telemetry.istio-system.svc.cluster.local"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-11T23:23:33.342Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "172.21.157.224_443",
      "address": {
       "socket_address": {
        "address": "172.21.157.224",
        "port_value": 443
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "context.reporter.uid": {
              "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
             },
             "source.uid": {
              "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
             },
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.host": {
              "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istio-ingressgateway"
             },
             "destination.service.name": {
              "string_value": "istio-ingressgateway"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             }
            }
           },
           "transport": {
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
              }
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "cluster": "outbound|443||istio-ingressgateway.istio-system.svc.cluster.local",
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "stat_prefix": "outbound|443||istio-ingressgateway.istio-system.svc.cluster.local"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-11T23:23:33.343Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "172.21.0.1_443",
      "address": {
       "socket_address": {
        "address": "172.21.0.1",
        "port_value": 443
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "transport": {
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
              }
             }
            },
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
           },
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "destination.service.namespace": {
              "string_value": "default"
             },
             "destination.service.name": {
              "string_value": "kubernetes"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             },
             "context.reporter.uid": {
              "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
             },
             "source.uid": {
              "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
             },
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.uid": {
              "string_value": "istio://default/services/kubernetes"
             },
             "destination.service.host": {
              "string_value": "kubernetes.default.svc.cluster.local"
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "cluster": "outbound|443||kubernetes.default.svc.cluster.local",
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "stat_prefix": "outbound|443||kubernetes.default.svc.cluster.local"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-11T23:23:33.343Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "172.21.157.224_31400",
      "address": {
       "socket_address": {
        "address": "172.21.157.224",
        "port_value": 31400
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "transport": {
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
              }
             }
            },
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
           },
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "context.reporter.uid": {
              "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
             },
             "source.uid": {
              "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
             },
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istio-ingressgateway"
             },
             "destination.service.host": {
              "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
             },
             "destination.service.name": {
              "string_value": "istio-ingressgateway"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "access_log": [
            {
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             },
             "name": "envoy.file_access_log"
            }
           ],
           "stat_prefix": "outbound|31400||istio-ingressgateway.istio-system.svc.cluster.local",
           "cluster": "outbound|31400||istio-ingressgateway.istio-system.svc.cluster.local"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-11T23:23:33.343Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "0.0.0.0_15032",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15032
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                }
               }
              },
              "transport": {
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                 }
                }
               },
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "random_sampling": {
             "value": 100
            },
            "overall_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           },
           "use_remote_address": false,
           "rds": {
            "route_config_name": "15032",
            "config_source": {
             "ads": {}
            }
           },
           "stat_prefix": "0.0.0.0_15032",
           "stream_idle_timeout": "0s",
           "generate_request_id": true
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-11T23:23:33.344Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "0.0.0.0_15004",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15004
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "stream_idle_timeout": "0s",
           "generate_request_id": true,
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                }
               }
              },
              "transport": {
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                 }
                }
               },
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           },
           "use_remote_address": false,
           "rds": {
            "route_config_name": "15004",
            "config_source": {
             "ads": {}
            }
           },
           "stat_prefix": "0.0.0.0_15004"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-11T23:23:33.358Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "0.0.0.0_9080",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 9080
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "use_remote_address": false,
           "stat_prefix": "0.0.0.0_9080",
           "rds": {
            "route_config_name": "9080",
            "config_source": {
             "ads": {}
            }
           },
           "generate_request_id": true,
           "stream_idle_timeout": "0s",
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "transport": {
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                 }
                }
               }
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           }
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-11T23:23:33.359Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "0.0.0.0_9901",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 9901
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                }
               }
              },
              "transport": {
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                 }
                }
               }
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "random_sampling": {
             "value": 100
            },
            "overall_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           },
           "use_remote_address": false,
           "rds": {
            "route_config_name": "9901",
            "config_source": {
             "ads": {}
            }
           },
           "stat_prefix": "0.0.0.0_9901",
           "stream_idle_timeout": "0s",
           "generate_request_id": true
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-11T23:23:33.360Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "0.0.0.0_15030",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15030
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           },
           "stat_prefix": "0.0.0.0_15030",
           "rds": {
            "route_config_name": "15030",
            "config_source": {
             "ads": {}
            }
           },
           "use_remote_address": false,
           "generate_request_id": true,
           "stream_idle_timeout": "0s",
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "default_destination_service": "default",
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                }
               }
              },
              "mixer_attributes": {
               "attributes": {
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                }
               }
              },
              "transport": {
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                 }
                }
               }
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-11T23:23:33.361Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "0.0.0.0_15031",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15031
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "generate_request_id": true,
           "stream_idle_timeout": "0s",
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "config": {
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "transport": {
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                 }
                }
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                }
               }
              }
             },
             "name": "mixer"
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS",
            "client_sampling": {
             "value": 100
            }
           },
           "use_remote_address": false,
           "stat_prefix": "0.0.0.0_15031",
           "rds": {
            "route_config_name": "15031",
            "config_source": {
             "ads": {}
            }
           }
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-11T23:23:33.361Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "0.0.0.0_15010",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15010
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n",
              "path": "/dev/stdout"
             }
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                }
               }
              },
              "transport": {
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                 }
                }
               },
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "random_sampling": {
             "value": 100
            },
            "overall_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           },
           "use_remote_address": false,
           "rds": {
            "config_source": {
             "ads": {}
            },
            "route_config_name": "15010"
           },
           "stat_prefix": "0.0.0.0_15010",
           "stream_idle_timeout": "0s",
           "generate_request_id": true,
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-11T23:23:33.362Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "0.0.0.0_9093",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 9093
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "stat_prefix": "0.0.0.0_9093",
           "use_remote_address": false,
           "rds": {
            "config_source": {
             "ads": {}
            },
            "route_config_name": "9093"
           },
           "stream_idle_timeout": "0s",
           "generate_request_id": true,
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "transport": {
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                 }
                }
               },
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS",
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            }
           }
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-11T23:23:33.363Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "0.0.0.0_15029",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15029
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "use_remote_address": false,
           "stat_prefix": "0.0.0.0_15029",
           "rds": {
            "config_source": {
             "ads": {}
            },
            "route_config_name": "15029"
           },
           "stream_idle_timeout": "0s",
           "generate_request_id": true,
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n",
              "path": "/dev/stdout"
             }
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "transport": {
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                 }
                }
               }
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "random_sampling": {
             "value": 100
            },
            "overall_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           }
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-11T23:23:33.364Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "0.0.0.0_8060",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 8060
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "stream_idle_timeout": "0s",
           "generate_request_id": true,
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n",
              "path": "/dev/stdout"
             }
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "transport": {
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                 }
                }
               },
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           },
           "stat_prefix": "0.0.0.0_8060",
           "use_remote_address": false,
           "rds": {
            "route_config_name": "8060",
            "config_source": {
             "ads": {}
            }
           }
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-11T23:23:33.365Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "0.0.0.0_8080",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 8080
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "stream_idle_timeout": "0s",
           "generate_request_id": true,
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "config": {
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.reporter.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                }
               }
              },
              "transport": {
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                 }
                }
               }
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              }
             },
             "name": "mixer"
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "random_sampling": {
             "value": 100
            },
            "overall_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           },
           "rds": {
            "route_config_name": "8080",
            "config_source": {
             "ads": {}
            }
           },
           "use_remote_address": false,
           "stat_prefix": "0.0.0.0_8080"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-11T23:23:33.366Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "0.0.0.0_9091",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 9091
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "transport": {
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                 }
                }
               },
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                }
               }
              },
              "mixer_attributes": {
               "attributes": {
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "random_sampling": {
             "value": 100
            },
            "overall_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           },
           "rds": {
            "route_config_name": "9091",
            "config_source": {
             "ads": {}
            }
           },
           "stat_prefix": "0.0.0.0_9091",
           "use_remote_address": false,
           "stream_idle_timeout": "0s",
           "generate_request_id": true,
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-11T23:23:33.366Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "0.0.0.0_9090",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 9090
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "stream_idle_timeout": "0s",
           "generate_request_id": true,
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             },
             "name": "envoy.file_access_log"
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "transport": {
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                 }
                }
               },
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS",
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            }
           },
           "rds": {
            "route_config_name": "9090",
            "config_source": {
             "ads": {}
            }
           },
           "use_remote_address": false,
           "stat_prefix": "0.0.0.0_9090"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-11T23:23:33.367Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "0.0.0.0_80",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 80
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "stat_prefix": "0.0.0.0_80",
           "rds": {
            "config_source": {
             "ads": {}
            },
            "route_config_name": "80"
           },
           "use_remote_address": false,
           "stream_idle_timeout": "0s",
           "generate_request_id": true,
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "transport": {
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                 }
                }
               }
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://myserver-v1-67c5c9d544-vl9b7.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           }
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-11T23:23:33.368Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "172.30.172.171_15020",
      "address": {
       "socket_address": {
        "address": "172.30.172.171",
        "port_value": 15020
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "cluster": "inbound|15020||mgmtCluster",
           "access_log": [
            {
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             },
             "name": "envoy.file_access_log"
            }
           ],
           "stat_prefix": "inbound|15020||mgmtCluster"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-11T23:23:33.368Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "listener": {
      "name": "virtual",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15001
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "stat_prefix": "PassthroughCluster",
           "cluster": "PassthroughCluster"
          }
         }
        ]
       }
      ],
      "use_original_dst": true
     },
     "last_updated": "2018-11-11T23:23:33.368Z"
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.RoutesConfigDump",
   "static_route_configs": [
    {
     "route_config": {
      "name": "inbound|80||myserver.default.svc.cluster.local",
      "virtual_hosts": [
       {
        "name": "inbound|http|80",
        "domains": [
         "*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "inbound|80||myserver.default.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "myserver.default.svc.cluster.local:80/*"
          },
          "per_filter_config": {
           "mixer": {
            "mixer_attributes": {
             "attributes": {
              "destination.service.name": {
               "string_value": "myserver"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/myserver"
              },
              "destination.service.host": {
               "string_value": "myserver.default.svc.cluster.local"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-11T23:23:33.338Z"
    },
    {
     "route_config": {
      "name": "inbound|80||myserver.default.svc.cluster.local",
      "virtual_hosts": [
       {
        "name": "inbound|http|80",
        "domains": [
         "*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "inbound|80||myserver.default.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "myserver.default.svc.cluster.local:80/*"
          },
          "per_filter_config": {
           "mixer": {
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "myserver.default.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/myserver"
              },
              "destination.service.name": {
               "string_value": "myserver"
              },
              "destination.service.namespace": {
               "string_value": "default"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-11T23:23:33.337Z"
    },
    {
     "route_config": {
      "virtual_hosts": [
       {
        "name": "backend",
        "domains": [
         "*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/stats/prometheus"
          },
          "route": {
           "cluster": "prometheus_stats"
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2018-11-11T23:22:33.275Z"
    }
   ],
   "dynamic_route_configs": [
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "route_config": {
      "name": "9090",
      "virtual_hosts": [
       {
        "name": "prometheus.istio-system.svc.cluster.local:9090",
        "domains": [
         "prometheus.istio-system.svc.cluster.local",
         "prometheus.istio-system.svc.cluster.local:9090",
         "prometheus.istio-system",
         "prometheus.istio-system:9090",
         "prometheus.istio-system.svc.cluster",
         "prometheus.istio-system.svc.cluster:9090",
         "prometheus.istio-system.svc",
         "prometheus.istio-system.svc:9090",
         "172.21.48.233",
         "172.21.48.233:9090"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9090||prometheus.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "prometheus.istio-system.svc.cluster.local:9090/*"
          },
          "per_filter_config": {
           "mixer": {
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "prometheus"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/prometheus"
              },
              "destination.service.host": {
               "string_value": "prometheus.istio-system.svc.cluster.local"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/prometheus"
              },
              "destination.service.host": {
               "string_value": "prometheus.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "prometheus"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-12T16:07:08.030Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "route_config": {
      "name": "9091",
      "virtual_hosts": [
       {
        "name": "istio-policy.istio-system.svc.cluster.local:9091",
        "domains": [
         "istio-policy.istio-system.svc.cluster.local",
         "istio-policy.istio-system.svc.cluster.local:9091",
         "istio-policy.istio-system",
         "istio-policy.istio-system:9091",
         "istio-policy.istio-system.svc.cluster",
         "istio-policy.istio-system.svc.cluster:9091",
         "istio-policy.istio-system.svc",
         "istio-policy.istio-system.svc:9091",
         "172.21.104.150",
         "172.21.104.150:9091"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9091||istio-policy.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-policy.istio-system.svc.cluster.local:9091/*"
          },
          "per_filter_config": {
           "mixer": {
            "mixer_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-policy"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-policy"
              },
              "destination.service.host": {
               "string_value": "istio-policy.istio-system.svc.cluster.local"
              }
             }
            },
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-policy"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-policy"
              },
              "destination.service.host": {
               "string_value": "istio-policy.istio-system.svc.cluster.local"
              }
             }
            }
           }
          }
         }
        ]
       },
       {
        "name": "istio-telemetry.istio-system.svc.cluster.local:9091",
        "domains": [
         "istio-telemetry.istio-system.svc.cluster.local",
         "istio-telemetry.istio-system.svc.cluster.local:9091",
         "istio-telemetry.istio-system",
         "istio-telemetry.istio-system:9091",
         "istio-telemetry.istio-system.svc.cluster",
         "istio-telemetry.istio-system.svc.cluster:9091",
         "istio-telemetry.istio-system.svc",
         "istio-telemetry.istio-system.svc:9091",
         "172.21.28.71",
         "172.21.28.71:9091"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9091||istio-telemetry.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-telemetry.istio-system.svc.cluster.local:9091/*"
          },
          "per_filter_config": {
           "mixer": {
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-telemetry.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-telemetry"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-telemetry"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-telemetry.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-telemetry"
              },
              "destination.service.name": {
               "string_value": "istio-telemetry"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-12T16:07:08.030Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "route_config": {
      "name": "8080",
      "virtual_hosts": [
       {
        "name": "istio-pilot.istio-system.svc.cluster.local:8080",
        "domains": [
         "istio-pilot.istio-system.svc.cluster.local",
         "istio-pilot.istio-system.svc.cluster.local:8080",
         "istio-pilot.istio-system",
         "istio-pilot.istio-system:8080",
         "istio-pilot.istio-system.svc.cluster",
         "istio-pilot.istio-system.svc.cluster:8080",
         "istio-pilot.istio-system.svc",
         "istio-pilot.istio-system.svc:8080",
         "172.21.180.133",
         "172.21.180.133:8080"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|8080||istio-pilot.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-pilot.istio-system.svc.cluster.local:8080/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-pilot"
              },
              "destination.service.host": {
               "string_value": "istio-pilot.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-pilot"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-pilot.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-pilot"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-pilot"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-12T16:07:08.030Z"
    },
    {
     "version_info": "2018-11-11T23:44:44Z/30",
     "route_config": {
      "name": "80",
      "virtual_hosts": [
       {
        "name": "istio-egressgateway.istio-system.svc.cluster.local:80",
        "domains": [
         "istio-egressgateway.istio-system.svc.cluster.local",
         "istio-egressgateway.istio-system.svc.cluster.local:80",
         "istio-egressgateway.istio-system",
         "istio-egressgateway.istio-system:80",
         "istio-egressgateway.istio-system.svc.cluster",
         "istio-egressgateway.istio-system.svc.cluster:80",
         "istio-egressgateway.istio-system.svc",
         "istio-egressgateway.istio-system.svc:80",
         "172.21.191.164",
         "172.21.191.164:80"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|80||istio-egressgateway.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-egressgateway.istio-system.svc.cluster.local:80/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-egressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-egressgateway"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-egressgateway"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-egressgateway"
              },
              "destination.service.host": {
               "string_value": "istio-egressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-egressgateway"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       },
       {
        "name": "istio-ingressgateway.istio-system.svc.cluster.local:80",
        "domains": [
         "istio-ingressgateway.istio-system.svc.cluster.local",
         "istio-ingressgateway.istio-system.svc.cluster.local:80",
         "istio-ingressgateway.istio-system",
         "istio-ingressgateway.istio-system:80",
         "istio-ingressgateway.istio-system.svc.cluster",
         "istio-ingressgateway.istio-system.svc.cluster:80",
         "istio-ingressgateway.istio-system.svc",
         "istio-ingressgateway.istio-system.svc:80",
         "172.21.157.224",
         "172.21.157.224:80"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|80||istio-ingressgateway.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-ingressgateway.istio-system.svc.cluster.local:80/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              },
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       },
       {
        "name": "myserver.default.svc.cluster.local:80",
        "domains": [
         "myserver.default.svc.cluster.local",
         "myserver.default.svc.cluster.local:80",
         "myserver",
         "myserver:80",
         "myserver.default.svc.cluster",
         "myserver.default.svc.cluster:80",
         "myserver.default.svc",
         "myserver.default.svc:80",
         "myserver.default",
         "myserver.default:80",
         "172.21.241.147",
         "172.21.241.147:80"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|80||myserver.default.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "myserver.default.svc.cluster.local:80/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://default/services/myserver"
              },
              "destination.service.host": {
               "string_value": "myserver.default.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "myserver"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "myserver.default.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/myserver"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "myserver"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       },
       {
        "name": "myserver2.default.svc.cluster.local:80",
        "domains": [
         "myserver2.default.svc.cluster.local",
         "myserver2.default.svc.cluster.local:80",
         "myserver2",
         "myserver2:80",
         "myserver2.default.svc.cluster",
         "myserver2.default.svc.cluster:80",
         "myserver2.default.svc",
         "myserver2.default.svc:80",
         "myserver2.default",
         "myserver2.default:80",
         "172.21.163.106",
         "172.21.163.106:80"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|80||myserver2.default.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "myserver2.default.svc.cluster.local:80/*"
          },
          "per_filter_config": {
           "mixer": {
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "myserver2.default.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/myserver2"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "myserver2"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "myserver2"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/myserver2"
              },
              "destination.service.host": {
               "string_value": "myserver2.default.svc.cluster.local"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-12T16:07:08.030Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "route_config": {
      "name": "9901",
      "virtual_hosts": [
       {
        "name": "istio-galley.istio-system.svc.cluster.local:9901",
        "domains": [
         "istio-galley.istio-system.svc.cluster.local",
         "istio-galley.istio-system.svc.cluster.local:9901",
         "istio-galley.istio-system",
         "istio-galley.istio-system:9901",
         "istio-galley.istio-system.svc.cluster",
         "istio-galley.istio-system.svc.cluster:9901",
         "istio-galley.istio-system.svc",
         "istio-galley.istio-system.svc:9901",
         "172.21.13.248",
         "172.21.13.248:9901"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9901||istio-galley.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-galley.istio-system.svc.cluster.local:9901/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-galley"
              },
              "destination.service.host": {
               "string_value": "istio-galley.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-galley"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-galley"
              },
              "destination.service.host": {
               "string_value": "istio-galley.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-galley"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-12T16:07:08.030Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "route_config": {
      "name": "15010",
      "virtual_hosts": [
       {
        "name": "istio-pilot.istio-system.svc.cluster.local:15010",
        "domains": [
         "istio-pilot.istio-system.svc.cluster.local",
         "istio-pilot.istio-system.svc.cluster.local:15010",
         "istio-pilot.istio-system",
         "istio-pilot.istio-system:15010",
         "istio-pilot.istio-system.svc.cluster",
         "istio-pilot.istio-system.svc.cluster:15010",
         "istio-pilot.istio-system.svc",
         "istio-pilot.istio-system.svc:15010",
         "172.21.180.133",
         "172.21.180.133:15010"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|15010||istio-pilot.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-pilot.istio-system.svc.cluster.local:15010/*"
          },
          "per_filter_config": {
           "mixer": {
            "mixer_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-pilot"
              },
              "destination.service.host": {
               "string_value": "istio-pilot.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-pilot"
              }
             }
            },
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-pilot.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-pilot"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-pilot"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-12T16:07:08.030Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "route_config": {
      "name": "9080",
      "virtual_hosts": [
       {
        "name": "details.default.svc.cluster.local:9080",
        "domains": [
         "details.default.svc.cluster.local",
         "details.default.svc.cluster.local:9080",
         "details",
         "details:9080",
         "details.default.svc.cluster",
         "details.default.svc.cluster:9080",
         "details.default.svc",
         "details.default.svc:9080",
         "details.default",
         "details.default:9080",
         "172.21.56.74",
         "172.21.56.74:9080"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9080||details.default.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "details.default.svc.cluster.local:9080/*"
          },
          "per_filter_config": {
           "mixer": {
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "details.default.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/details"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "details"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "details"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/details"
              },
              "destination.service.host": {
               "string_value": "details.default.svc.cluster.local"
              }
             }
            }
           }
          }
         }
        ]
       },
       {
        "name": "productpage.default.svc.cluster.local:9080",
        "domains": [
         "productpage.default.svc.cluster.local",
         "productpage.default.svc.cluster.local:9080",
         "productpage",
         "productpage:9080",
         "productpage.default.svc.cluster",
         "productpage.default.svc.cluster:9080",
         "productpage.default.svc",
         "productpage.default.svc:9080",
         "productpage.default",
         "productpage.default:9080",
         "172.21.58.113",
         "172.21.58.113:9080"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9080||productpage.default.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "productpage.default.svc.cluster.local:9080/*"
          },
          "per_filter_config": {
           "mixer": {
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "productpage.default.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/productpage"
              },
              "destination.service.name": {
               "string_value": "productpage"
              },
              "destination.service.namespace": {
               "string_value": "default"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "productpage"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/productpage"
              },
              "destination.service.host": {
               "string_value": "productpage.default.svc.cluster.local"
              }
             }
            }
           }
          }
         }
        ]
       },
       {
        "name": "reviews.default.svc.cluster.local:9080",
        "domains": [
         "reviews.default.svc.cluster.local",
         "reviews.default.svc.cluster.local:9080",
         "reviews",
         "reviews:9080",
         "reviews.default.svc.cluster",
         "reviews.default.svc.cluster:9080",
         "reviews.default.svc",
         "reviews.default.svc:9080",
         "reviews.default",
         "reviews.default:9080",
         "172.21.173.222",
         "172.21.173.222:9080"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9080||reviews.default.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "reviews.default.svc.cluster.local:9080/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.name": {
               "string_value": "reviews"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.host": {
               "string_value": "reviews.default.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/reviews"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "reviews.default.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/reviews"
              },
              "destination.service.name": {
               "string_value": "reviews"
              },
              "destination.service.namespace": {
               "string_value": "default"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-12T16:07:08.030Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "route_config": {
      "name": "15029",
      "virtual_hosts": [
       {
        "name": "istio-ingressgateway.istio-system.svc.cluster.local:15029",
        "domains": [
         "istio-ingressgateway.istio-system.svc.cluster.local",
         "istio-ingressgateway.istio-system.svc.cluster.local:15029",
         "istio-ingressgateway.istio-system",
         "istio-ingressgateway.istio-system:15029",
         "istio-ingressgateway.istio-system.svc.cluster",
         "istio-ingressgateway.istio-system.svc.cluster:15029",
         "istio-ingressgateway.istio-system.svc",
         "istio-ingressgateway.istio-system.svc:15029",
         "172.21.157.224",
         "172.21.157.224:15029"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|15029||istio-ingressgateway.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-ingressgateway.istio-system.svc.cluster.local:15029/*"
          },
          "per_filter_config": {
           "mixer": {
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              },
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-12T16:07:08.030Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "route_config": {
      "name": "15032",
      "virtual_hosts": [
       {
        "name": "istio-ingressgateway.istio-system.svc.cluster.local:15032",
        "domains": [
         "istio-ingressgateway.istio-system.svc.cluster.local",
         "istio-ingressgateway.istio-system.svc.cluster.local:15032",
         "istio-ingressgateway.istio-system",
         "istio-ingressgateway.istio-system:15032",
         "istio-ingressgateway.istio-system.svc.cluster",
         "istio-ingressgateway.istio-system.svc.cluster:15032",
         "istio-ingressgateway.istio-system.svc",
         "istio-ingressgateway.istio-system.svc:15032",
         "172.21.157.224",
         "172.21.157.224:15032"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|15032||istio-ingressgateway.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-ingressgateway.istio-system.svc.cluster.local:15032/*"
          },
          "per_filter_config": {
           "mixer": {
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              },
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              }
             }
            },
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-12T16:07:08.030Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "route_config": {
      "name": "15031",
      "virtual_hosts": [
       {
        "name": "istio-ingressgateway.istio-system.svc.cluster.local:15031",
        "domains": [
         "istio-ingressgateway.istio-system.svc.cluster.local",
         "istio-ingressgateway.istio-system.svc.cluster.local:15031",
         "istio-ingressgateway.istio-system",
         "istio-ingressgateway.istio-system:15031",
         "istio-ingressgateway.istio-system.svc.cluster",
         "istio-ingressgateway.istio-system.svc.cluster:15031",
         "istio-ingressgateway.istio-system.svc",
         "istio-ingressgateway.istio-system.svc:15031",
         "172.21.157.224",
         "172.21.157.224:15031"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|15031||istio-ingressgateway.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-ingressgateway.istio-system.svc.cluster.local:15031/*"
          },
          "per_filter_config": {
           "mixer": {
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              },
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-12T16:07:08.030Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "route_config": {
      "name": "15004",
      "virtual_hosts": [
       {
        "name": "istio-policy.istio-system.svc.cluster.local:15004",
        "domains": [
         "istio-policy.istio-system.svc.cluster.local",
         "istio-policy.istio-system.svc.cluster.local:15004",
         "istio-policy.istio-system",
         "istio-policy.istio-system:15004",
         "istio-policy.istio-system.svc.cluster",
         "istio-policy.istio-system.svc.cluster:15004",
         "istio-policy.istio-system.svc",
         "istio-policy.istio-system.svc:15004",
         "172.21.104.150",
         "172.21.104.150:15004"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-policy.istio-system.svc.cluster.local:15004/*"
          },
          "per_filter_config": {
           "mixer": {
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-policy"
              },
              "destination.service.host": {
               "string_value": "istio-policy.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-policy"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-policy.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-policy"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-policy"
              }
             }
            }
           }
          }
         }
        ]
       },
       {
        "name": "istio-telemetry.istio-system.svc.cluster.local:15004",
        "domains": [
         "istio-telemetry.istio-system.svc.cluster.local",
         "istio-telemetry.istio-system.svc.cluster.local:15004",
         "istio-telemetry.istio-system",
         "istio-telemetry.istio-system:15004",
         "istio-telemetry.istio-system.svc.cluster",
         "istio-telemetry.istio-system.svc.cluster:15004",
         "istio-telemetry.istio-system.svc",
         "istio-telemetry.istio-system.svc:15004",
         "172.21.28.71",
         "172.21.28.71:15004"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-telemetry.istio-system.svc.cluster.local:15004/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-telemetry"
              },
              "destination.service.host": {
               "string_value": "istio-telemetry.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-telemetry"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-telemetry"
              },
              "destination.service.host": {
               "string_value": "istio-telemetry.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-telemetry"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-12T16:07:08.030Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "route_config": {
      "name": "15030",
      "virtual_hosts": [
       {
        "name": "istio-ingressgateway.istio-system.svc.cluster.local:15030",
        "domains": [
         "istio-ingressgateway.istio-system.svc.cluster.local",
         "istio-ingressgateway.istio-system.svc.cluster.local:15030",
         "istio-ingressgateway.istio-system",
         "istio-ingressgateway.istio-system:15030",
         "istio-ingressgateway.istio-system.svc.cluster",
         "istio-ingressgateway.istio-system.svc.cluster:15030",
         "istio-ingressgateway.istio-system.svc",
         "istio-ingressgateway.istio-system.svc:15030",
         "172.21.157.224",
         "172.21.157.224:15030"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|15030||istio-ingressgateway.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-ingressgateway.istio-system.svc.cluster.local:15030/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              },
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              },
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-12T16:07:08.030Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "route_config": {
      "name": "9093",
      "virtual_hosts": [
       {
        "name": "istio-citadel.istio-system.svc.cluster.local:9093",
        "domains": [
         "istio-citadel.istio-system.svc.cluster.local",
         "istio-citadel.istio-system.svc.cluster.local:9093",
         "istio-citadel.istio-system",
         "istio-citadel.istio-system:9093",
         "istio-citadel.istio-system.svc.cluster",
         "istio-citadel.istio-system.svc.cluster:9093",
         "istio-citadel.istio-system.svc",
         "istio-citadel.istio-system.svc:9093",
         "172.21.12.47",
         "172.21.12.47:9093"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9093||istio-citadel.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-citadel.istio-system.svc.cluster.local:9093/*"
          },
          "per_filter_config": {
           "mixer": {
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-citadel"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-citadel"
              },
              "destination.service.host": {
               "string_value": "istio-citadel.istio-system.svc.cluster.local"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-citadel"
              },
              "destination.service.host": {
               "string_value": "istio-citadel.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-citadel"
              }
             }
            }
           }
          }
         }
        ]
       },
       {
        "name": "istio-galley.istio-system.svc.cluster.local:9093",
        "domains": [
         "istio-galley.istio-system.svc.cluster.local",
         "istio-galley.istio-system.svc.cluster.local:9093",
         "istio-galley.istio-system",
         "istio-galley.istio-system:9093",
         "istio-galley.istio-system.svc.cluster",
         "istio-galley.istio-system.svc.cluster:9093",
         "istio-galley.istio-system.svc",
         "istio-galley.istio-system.svc:9093",
         "172.21.13.248",
         "172.21.13.248:9093"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9093||istio-galley.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-galley.istio-system.svc.cluster.local:9093/*"
          },
          "per_filter_config": {
           "mixer": {
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-galley"
              },
              "destination.service.host": {
               "string_value": "istio-galley.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-galley"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-galley"
              },
              "destination.service.host": {
               "string_value": "istio-galley.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-galley"
              }
             }
            }
           }
          }
         }
        ]
       },
       {
        "name": "istio-pilot.istio-system.svc.cluster.local:9093",
        "domains": [
         "istio-pilot.istio-system.svc.cluster.local",
         "istio-pilot.istio-system.svc.cluster.local:9093",
         "istio-pilot.istio-system",
         "istio-pilot.istio-system:9093",
         "istio-pilot.istio-system.svc.cluster",
         "istio-pilot.istio-system.svc.cluster:9093",
         "istio-pilot.istio-system.svc",
         "istio-pilot.istio-system.svc:9093",
         "172.21.180.133",
         "172.21.180.133:9093"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9093||istio-pilot.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-pilot.istio-system.svc.cluster.local:9093/*"
          },
          "per_filter_config": {
           "mixer": {
            "mixer_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-pilot"
              },
              "destination.service.host": {
               "string_value": "istio-pilot.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-pilot"
              }
             }
            },
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-pilot"
              },
              "destination.service.host": {
               "string_value": "istio-pilot.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-pilot"
              }
             }
            }
           }
          }
         }
        ]
       },
       {
        "name": "istio-policy.istio-system.svc.cluster.local:9093",
        "domains": [
         "istio-policy.istio-system.svc.cluster.local",
         "istio-policy.istio-system.svc.cluster.local:9093",
         "istio-policy.istio-system",
         "istio-policy.istio-system:9093",
         "istio-policy.istio-system.svc.cluster",
         "istio-policy.istio-system.svc.cluster:9093",
         "istio-policy.istio-system.svc",
         "istio-policy.istio-system.svc:9093",
         "172.21.104.150",
         "172.21.104.150:9093"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9093||istio-policy.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-policy.istio-system.svc.cluster.local:9093/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-policy"
              },
              "destination.service.host": {
               "string_value": "istio-policy.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-policy"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.name": {
               "string_value": "istio-policy"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.host": {
               "string_value": "istio-policy.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-policy"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       },
       {
        "name": "istio-telemetry.istio-system.svc.cluster.local:9093",
        "domains": [
         "istio-telemetry.istio-system.svc.cluster.local",
         "istio-telemetry.istio-system.svc.cluster.local:9093",
         "istio-telemetry.istio-system",
         "istio-telemetry.istio-system:9093",
         "istio-telemetry.istio-system.svc.cluster",
         "istio-telemetry.istio-system.svc.cluster:9093",
         "istio-telemetry.istio-system.svc",
         "istio-telemetry.istio-system.svc:9093",
         "172.21.28.71",
         "172.21.28.71:9093"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9093||istio-telemetry.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-telemetry.istio-system.svc.cluster.local:9093/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-telemetry.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-telemetry"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-telemetry"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-telemetry"
              },
              "destination.service.host": {
               "string_value": "istio-telemetry.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-telemetry"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-12T16:07:08.030Z"
    },
    {
     "version_info": "2018-11-11T23:23:00Z/20",
     "route_config": {
      "name": "8060",
      "virtual_hosts": [
       {
        "name": "istio-citadel.istio-system.svc.cluster.local:8060",
        "domains": [
         "istio-citadel.istio-system.svc.cluster.local",
         "istio-citadel.istio-system.svc.cluster.local:8060",
         "istio-citadel.istio-system",
         "istio-citadel.istio-system:8060",
         "istio-citadel.istio-system.svc.cluster",
         "istio-citadel.istio-system.svc.cluster:8060",
         "istio-citadel.istio-system.svc",
         "istio-citadel.istio-system.svc:8060",
         "172.21.12.47",
         "172.21.12.47:8060"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|8060||istio-citadel.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-citadel.istio-system.svc.cluster.local:8060/*"
          },
          "per_filter_config": {
           "mixer": {
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-citadel.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-citadel"
              },
              "destination.service.name": {
               "string_value": "istio-citadel"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-citadel.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-citadel"
              },
              "destination.service.name": {
               "string_value": "istio-citadel"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-12T16:07:08.030Z"
    }
   ]
  }
 ]
}
